--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/11.jpg" title="头条"></a><a href="https://github.com/xsksmt389/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/xsksmt389/www/master/t/djy/13.jpg" title="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/xsksmt389/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>大头条集锦</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/xsksmt389/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsksmt389/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsksmt389/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xsksmt389/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12485003.md#1" target="_blank">伊朗称联合国武器禁运到期 蓬佩奥强烈回应</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12485003.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/06/000_1QR3K3-320x200.jpg" align ="left"></a>伊朗周日（10月18日）宣称，联合国对伊朗武器禁运于当日到期。美国国务卿迈克·蓬佩奥（Mike Pompeo）当天发表强烈警告说，所有联合国对伊朗制裁已于上月恢.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 5:10 AM					</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/6/20/n10499093.md#1" target="_blank">魔鬼在统治着我们的世界(17)：艺术篇</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/6/20/n10499093.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/06/900cde37a93e7b86716697e1cb974aad-150x120.jpg" align ="left"></a>人类关于“美学”的探讨汗牛充栋。信神的人知道，最美的一切来自天国世界。高深的艺术，都尽力模仿并在人世间展示天国的美。有些艺术词汇是从相关的神的名字直接演变来的。如果某一领域的艺术家能得到神的启迪或加持，就能成为该领域中的翘楚。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 5:00 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484566.md#1" target="_blank">【大时代华人】一家挺川反共的纽约教会</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484566.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/IMG_2122-150x120.jpg" align ="left"></a>进入今年九月份，每个周日出现在纽约市法拉盛图书馆旁边的“反共连侬墙”活动上增加了一条新的非常醒目的主题标语——“挺川反共”。
 在这条标语的两旁还有揭示中共近几十年来所犯的滔天罪恶的标语和图片，从六四到香港、到武汉肺炎。活动的发起人是磐石教会的邵俊。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 4:17 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484690.md#1" target="_blank">钟原：中共政治局学习量子科技难解困境</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484690.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-902793308-150x120.jpg" align ="left"></a>中共党媒显然对最近这次政治局会议低调处理，随后却对政治局集体学习大加渲染。上次政治局学习了考古，这一次学习量子科技，跨度之大，真需要政治局委员们的大脑快速转换。考古解决不了中共政权当前的困境，量子技术恐怕也解决不了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 2:05 AM							</td></tr>
@@ -11,17 +12,18 @@
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484118.md#1" target="_blank">中共大使威胁在港30万加人安全 激怒加拿大人</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12484118.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/Screen-Shot-2020-10-18-at-6.10.55-pm-150x120.png" align ="left"></a>近日加拿大政府给予港人难民庇护身份，遭中共驻加大使警告说这将“危害在港的30万加人的健康和安全”，此言论激怒了加国民众。加保守党领袖要求收回该言论并道歉，否则特鲁多政府应将其驱逐出境；加总理特鲁多也回应称，将大声捍卫人权。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 5:31 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/14/n12476425.md#1" target="_blank">受中共科技专制拖累 科企出国路几近被堵死</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/14/n12476425.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-969527060-600x400-1-150x120.jpg" align ="left"></a>在中共病毒肆虐的当下，科技与道德成了全球政府的关注点。中共对中国科技公司的控制带来国家安全威胁，迫使美国不得不出手反制，中共科技专制几乎封死了中国科企在海外的出路。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 5:30 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12483848.md#1" target="_blank">田云：电脑门发酵 拜登竞选经理自曝民调不实</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/18/n12483848.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/biden-and-harris-2-1200x800-150x120.jpg" align ="left"></a>这两条消息很不寻常。大选进入白热化阶段之际，拜登竞选团队忽然灭自家威风，这是在为败选打预防针吗？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 3:18 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/11/n12468511.md#1" target="_blank">【最新疫情10.18】全球单日新病例首破40万</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/11/n12468511.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228396688-150x120.jpg" align ="left"></a>10月18日全球中共病毒（武汉肺炎）疫情最新情况：
+<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/11/n12468511.md#1" target="_blank">【最新疫情10.18】欧美病例激增 但死亡人数少</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/11/n12468511.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228396688-150x120.jpg" align ="left"></a>10月18日全球中共病毒（武汉肺炎）疫情最新情况：
 
 中共肺炎全球疫情及美国疫情大数据请点击这里。
 要点：
-推特删白宫顾问“口罩无用论”推文/a>
+欧美病例激增 但死亡人数少
+推特删白宫顾问“口罩无用论”推文
 WHO：欧洲某些地区的重症监护病房近满员
 瑞士宣布全国口罩令
 教皇方济各住所的居民测试呈阳性
 德国总统进行自我隔离
 全球单日新病例首超40万 欧洲病例激增
-中共疫苗研发弯道超车 专家忧灾难性后.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 3:00 PM							</td></tr>
+中共疫苗研发.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 3:00 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12480830.md#1" target="_blank">【重播】川普威斯康星州演讲 支持执法机构</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12480830.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229134416-150x120.jpg" align ="left"></a>周六（10月17日）晚19:00（美东），美国总统川普在威斯康星州发表演讲 支持美国执法机构。大纪元将进行现场直播（中文同声翻译）......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 8:21 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12483509.md#1" target="_blank">拜登电脑门 美参议员要FBI回答六大问题</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12483509.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/05/190502194119100699-150x120.jpg" align ="left"></a>美国联邦参议员、国土安全与政府事务委员会主席罗恩?约翰逊（Ron Johnson）周六（10月17日）致函给联邦调查局（FBI）局长，要求FBI在下周四（22日）之前回答，他们是如何处理亨特?拜登（Hunter Biden）的笔记本电脑资料的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 7:41 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12483499.md#1" target="_blank">美ICE今秋第二轮行动 逮捕176在逃非法移民</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12483499.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-945287254-150x120.jpg" align ="left"></a>美国移民和海关执法局（ICE）机构周四（10月15日）宣布，已在全国范围内逮捕了一百七十多名在逃的非法移民，重点是针对避难所城市的非法移民逃犯。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月18日 7:03 AM							</td></tr>
@@ -50,6 +52,5 @@ Deloitte将关闭英国4个办事处
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482193.md#1" target="_blank">前生意伙伴举报亨特 游说拜登白宫见中企官员</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/17/n12482193.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-84379588-150x120.jpg" align ="left"></a>美国新闻网站Breitbart周五（10月16日）报导说，美国民主党总统候选人乔·拜登之子亨特（Hunter Biden）被人举报，利用其父的副总统职务为中共政府客户与投资者安排白宫的私人会议。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 3:38 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12481915.md#1" target="_blank">钟原：欧盟发起欧中贸易战的信号</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12481915.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-948009916-150x120.jpg" align ="left"></a>10月15日，欧盟开始对原产地为中国的铝制品征收30.4%～48.0%的反倾销关税。2018年，美国发起对美中贸易战，也从提高钢铝税开始，欧洲正在循着与美国一样的路线，欧中贸易战烽烟已起。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 1:13 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/21/n12420009.md#1" target="_blank">【思想领袖】史密斯：关乎美国未来的战斗</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/21/n12420009.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/download-95-150x120.jpg" align ="left"></a>第一个含义我们以前已经谈过。我们已经数次讨论过川普和俄国串通，即“通俄门”（Russiagate），不管我们怎么叫它。这是针对候选人川普以及后来川普总统的第一个行动，然后演变成了穆勒的调查、国会对川普总统的弹劾听证，以及最终的弹劾，最后又变成以新冠病毒（中共病毒）为武器，攻击川普政府。然后，我们看到几乎美国的每一个主要城市的街头，都出现了骚乱。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 9:30 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12481803.md#1" target="_blank">美向中国联通出手？FCC致信司法部要调查</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12481803.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/000_RM7IA-150x120.jpg" align ="left"></a>周五（10月16日）公开的一封信显示，美国联邦通信委员会（FCC）要求司法部和其它美国机构对中国联通继续在美国开展业务是否构成国家安全风险，进行详细说明。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 8:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/xsksmt389/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsksmt389/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/xsksmt389/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
