--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11263424.md#1" target="_blank">【征文】刘晓：古代侠士与侠义精神</a></li><li><a href="https://github.com/xsksmt389/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/15/n3871061.md#1" target="_blank">唐恩：推崇真善忍　褒奖显人心</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/1/n10885699.md#1" target="_blank">陆文：生与死的抉择</a></li><li><a href="https://github.com/xsksmt389/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11238020.md#1" target="_blank">四百万难治好的脑瘤并发症 修大法痊愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
