--- a/gb/20/10/11/n12468511.md
+++ b/gb/20/10/11/n12468511.md
@@ -291,7 +291,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/23/n11541717.md#1" target="_blank">林辉：中共70年前承诺建立美国式民主在哪里？</a></li><li><a href="https://github.com/xsksmt389/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/1/10/n2392045.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/28/n10672735.md#1" target="_blank">为反右开场祭旗：三人被处决 万人围观</a></li><li><a href="https://github.com/xsksmt389/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11412078.md#1" target="_blank">胡平：未来道德重建 法轮功将发挥更大作用</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
