--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -5,7 +5,7 @@
 <tr><td><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12478565.md#1" target="_blank"> 耳鸣70%有自律神经失调！5招改善耳鸣耳聋</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/15/n12478565.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/ear-tinnitus-0-1013-health11-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/12/n12471132.md#1" target="_blank"> 1张纸改善视力！胡乃文推荐3碗药膳 养眼补肾</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/12/n12471132.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/eyesight-chinese-medicine0-1013-health11-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/12/n12470660.md#1" target="_blank"> 罹癌不肯医治 江坤俊：给我半年 我还你50年</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/12/n12470660.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/breast-cancer-jiangkunjun-1012-health11-320x200.jpg"></a></td></tr>
-<tr><td><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/6/n12458321.md#1" target="_blank">扁平足一定要矫正吗？儿科医：2种情况要治疗</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/6/n12458321.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/shutterstock_1711270213-320x200.jpg"></a></td></tr>
+<tr><td><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/29/n12439663.md#1" target="_blank">提早发育会长不高吗？孩子性早熟有4个原因</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/29/n12439663.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/shutterstock_1425461492-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/30/n12443080.md#1" target="_blank">【直播】乳房有硬块是癌症？名医教你抗乳癌</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/30/n12443080.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/breast-cancer-10.3.20-health11-live-thumnail-web-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/15/n12405683.md#1" target="_blank">重训选哪种？五大重点一篇看懂</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/15/n12405683.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/weight-training_138319607-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/6/n12455951.md#1" target="_blank">蛋白质吃不够让你肌肉变少 肌少症的4大原因</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/6/n12455951.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/shutterstock_1808436256-320x200.jpg"></a></td></tr>
@@ -17,7 +17,6 @@
 <tr><td><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/5/10/n10379239.md#1" target="_blank">肾脏科权威：9大原因引发肾脏病！最可怕的是它</a><br></h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/18/5/10/n10379239.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2018/05/kidney-disease-1011-health11-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
 <h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/12/n12470563.md#1" target="_blank">70岁仍有20岁身材 日医：简单的减糖餐是火锅</a><br></h3>
-<h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/12/n12470839.md#1" target="_blank">肌少症增糖尿病、骨折风险 破解肌力不足3迷思</a><br></h3>
 <h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/12/n12471132.md#1" target="_blank">1张纸改善视力！胡乃文推荐3碗药膳 养眼补肾</a><br></h3>
 <h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/13/n12473190.md#1" target="_blank">减肥必吃淀粉的5大理由 吃对瘦得快不复胖</a><br></h3>
 <h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/14/n12476232.md#1" target="_blank">【慧聊养生】最具传奇修仙色彩的一味中药</a><br></h3>
@@ -26,5 +25,6 @@
 <h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12481202.md#1" target="_blank">换季流鼻水、皮肤痒？过敏自救有一套</a><br></h3>
 <h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/16/n12481545.md#1" target="_blank">自制3杯天然运动饮料 提升免疫力、改善疲劳</a><br></h3>
 <h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/10/9/n12465088.md#1" target="_blank">玉米笋低卡又补钾 2道料理更能减肥防中风</a><br></h3>
+<h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/20/9/29/n12439663.md#1" target="_blank">提早发育会长不高吗？孩子性早熟有4个原因</a><br></h3>
 <tr><td><h3><a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/xsksmt389/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/xsksmt389/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsksmt389/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/xsksmt389/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
